--- a/vcweb/README
+++ b/vcweb/README
@@ -1,28 +1,25 @@
 Dependencies:
     Python 2.6:
-        (either run as root or inside a virtualenv)
-        pip install celery
-        pip install django
-        pip install django-celery
-    EXPERIMENTAL:
-        pip install stomp.py (for experimental chat)
-        pip install orbited for server push chat
+    (either run as root or inside a virtualenv)
+    fabric 0.9.2+:
 
-    RabbitMQ
+    RabbitMQ (maybe)
 
+Steps to install:
+1. download and install easy_install
+2. easy_install pip
+3. pip install virtualenv (if you don't want to muck up your base python system)
+4. pip install fabric
+5. fab setup (change default settings in fabfile.py as necessary; eventually I
+should make this configurable)
+6. fab syncdb
+7. fab server (in one terminal)
+8. fab tornado (in another terminal) if you want to run vcweb w/ server push
+enabled.
 
-Use manage.py to set up your dev environment or the supplied setup-devdb.sh script
-
-./manage.py syncdb --noinput
-
-To load a set of fake test users:
-./manage.py loaddata test_users_participants
-
-To load a set of forestry test data:
-./manage.py loaddata forestry_test_data
-
-To start celery properly for task scheduling, you'll need to start both a celeryd
-and celerybeat, e.g.,
+To start up celeryd and celerybeat
 
 ./manage.py celeryd
 ./manage.py celerybeat
+
+(or fab celeryd / celerybeat)
