pushing djcelery loading to the end of settings.py so that settings_local.py configuration can be modify it

--- a/vcweb/README
+++ b/vcweb/README
@@ -25,7 +25,6 @@ this activates your virtualenv
 
 To start up celeryd and celerybeat
 
-./manage.py celeryd
-./manage.py celerybeat
+./manage.py celeryd -B
 
-(or fab celeryd / celerybeat)
+(or fab celeryd)
